zellij-server/src/plugins/unit/snapshots/zellij_server__plugins__plugin_tests__toggle_pane_embed_or_eject_for_pane_id_plugin_command.snap
---
source: zellij-server/src/plugins/./unit/plugin_tests.rs
assertion_line: 8050
expression: "format!(\"{:#?}\", screen_instruction)"
---
Some(
    TogglePaneEmbedOrEjectForPaneId(
        Terminal(
            2,
        ),
    ),
)
