zellij-server/src/plugins/unit/snapshots/zellij_server__plugins__plugin_tests__toggle_pane_id_fullscreen_plugin_command.snap
---
source: zellij-server/src/plugins/./unit/plugin_tests.rs
assertion_line: 7979
expression: "format!(\"{:#?}\", screen_instruction)"
---
Some(
    TogglePaneIdFullscreen(
        Terminal(
            2,
        ),
    ),
)
