zellij-server/src/plugins/unit/snapshots/zellij_server__plugins__plugin_tests__unblock_input_plugin_command.snap
---
source: zellij-server/src/plugins/./unit/plugin_tests.rs
assertion_line: 5695
expression: "format!(\"{:#?}\", plugin_bytes_events)"
---
Some(
    PluginBytes(
        [
            (
                0,
                1,
                [
                    82,
                    111,
                    119,
                    115,
                    58,
                    32,
                    50,
                    48,
                    44,
                    32,
                    67,
                    111,
                    108,
                    115,
                    58,
                    32,
                    49,
                    50,
                    49,
                    44,
                    32,
                    82,
                    101,
                    99,
                    101,
                    105,
                    118,
                    101,
                    100,
                    32,
                    101,
                    118,
                    101,
                    110,
                    116,
                    115,
                    58,
                    32,
                    91,
                    67,
                    108,
                    105,
                    77,
                    101,
                    115,
                    115,
                    97,
                    103,
                    101,
                    32,
                    123,
                    32,
                    110,
                    97,
                    109,
                    101,
                    58,
                    32,
                    34,
                    109,
                    101,
                    115,
                    115,
                    97,
                    103,
                    101,
                    95,
                    110,
                    97,
                    109,
                    101,
                    34,
                    44,
                    32,
                    112,
                    97,
                    121,
                    108,
                    111,
                    97,
                    100,
                    58,
                    32,
                    83,
                    111,
                    109,
                    101,
                    40,
                    34,
                    109,
                    101,
                    115,
                    115,
                    97,
                    103,
                    101,
                    95,
                    112,
                    97,
                    121,
                    108,
                    111,
                    97,
                    100,
                    34,
                    41,
                    44,
                    32,
                    97,
                    114,
                    103,
                    115,
                    58,
                    32,
                    83,
                    111,
                    109,
                    101,
                    40,
                    123,
                    125,
                    41,
                    32,
                    125,
                    93,
                    10,
                    13,
                ],
            ),
        ],
        Some(
            {
                "message_name",
            },
        ),
    ),
)
