zellij-server/src/plugins/unit/snapshots/zellij_server__plugins__plugin_tests__write_plugin_command.snap
---
source: zellij-server/src/plugins/./unit/plugin_tests.rs
assertion_line: 1117
expression: "format!(\"{:#?}\", new_tab_event)"
---
Some(
    WriteCharacter(
        [
            102,
            111,
            111,
        ],
        1,
    ),
)
